objects/Application_SFDC2__c.object
<CustomObject>
    <fields>
        <fullName>VIN__c</fullName>
        <description>VIN number</description>
        <label>VIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <label>Vehicle Make</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Mileage__c</fullName>
        <label>Vehicle Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <label>Vehicle Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Year__c</fullName>
        <description>Year of vehicle loan is for</description>
        <label>Vehicle Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vesting_Name__c</fullName>
        <description>Type of vesting (Trust, UTMA, Individual, Joint)</description>
        <label>Vesting Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>Advisor</fullName>
        <columns>NAME</columns>
        <columns>Branch__c</columns>
        <columns>Application_Source__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Application_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch__c</field>
            <operation>equals</operation>
            <value>BofIAdvisor</value>
        </filters>
        <label>Advisor</label>
        <sharedTo>
            <role>Financial_Advisor_Mgr</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Application_Status__c</columns>
        <columns>Application_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Auto_Lending_Indirect</fullName>
        <columns>NAME</columns>
        <columns>Application_Source__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Branch__c</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Completed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Source__c</field>
            <operation>equals</operation>
            <value>TCI</value>
        </filters>
        <label>Auto-Lending Indirect</label>
        <sharedTo>
            <role>Dealer_Services_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Banking</fullName>
        <columns>NAME</columns>
        <columns>Business_Name__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Loan_Officer_Name__c</columns>
        <columns>Application_Source__c</columns>
        <columns>Account_Type_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Id_Verification_Result__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Source__c</field>
            <operation>equals</operation>
            <value>MeridianLink</value>
        </filters>
        <label>Business Banking</label>
        <sharedTo>
            <role>Business_Banking</role>
            <role>Business_Banking_Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <recordTypes>
        <fullName>Andera</fullName>
        <active>true</active>
        <description>Applications received from the Andera system</description>
        <label>Andera</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enrollment</fullName>
        <active>true</active>
        <description>Applications received from the Enrollment system</description>
        <label>Enrollment</label>
    </recordTypes>
    <recordTypes>
        <fullName>MeridianLink</fullName>
        <active>true</active>
        <description>Applications Received from the MeridianLink system</description>
        <label>MeridianLink</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCI</fullName>
        <active>true</active>
        <description>Applications received from the TCI system</description>
        <label>TCI</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>